syntax = "proto3";

option go_package = "sigmaos/apps/socialnetwork/proto";

service GraphService {
	rpc GetFollowers(GetFollowersReq) returns (GraphGetRep);
	rpc GetFollowees(GetFolloweesReq) returns (GraphGetRep);
	rpc Follow(FollowReq) returns (GraphUpdateRep);
	rpc Unfollow(UnfollowReq) returns (GraphUpdateRep);
	rpc FollowWithUname(FollowWithUnameReq) returns (GraphUpdateRep);
	rpc UnfollowWithUname(UnfollowWithUnameReq) returns (GraphUpdateRep);
}

message GetFollowersReq {
	int64 followeeid = 1;
}

message GetFolloweesReq {
	int64 followerid = 1;
}

message GraphGetRep {
	string ok = 1;
	repeated int64 userids = 2;
}

message FollowReq { int64 followerid = 1;
	int64 followeeid = 2;
}

message UnfollowReq {
	int64 followerid = 1;
	int64 followeeid = 2;
}

message FollowWithUnameReq {
	string followeruname = 1;
	string followeeuname = 2;
}

message UnfollowWithUnameReq {
	string followeruname = 1;
	string followeeuname = 2;
}

message GraphUpdateRep {
	string ok = 1;
}
