syntax = "proto3";

option go_package = "sigmaos/apps/socialnetwork/proto";

message CheckUserReq {
	repeated string usernames = 1;
}

message CheckUserRep {
	string         ok = 1;
	repeated int64 userids = 2;
}

message RegisterUserReq {
	string username = 1;
	string password = 2;
	string firstname = 3;
	string lastname = 4;
}

message LoginReq {
	string username = 1;
	string password = 2;
}

message SNUserRep {
	string ok = 1;
	int64 userid = 2;
}

message CacheItem {
	string key = 1;
	bytes  val = 2;
}
